fix: html markups, styles fixes and modal overflow hidden fix

--- a/src/components/ImageGallery/ImageGallery.module.scss
+++ b/src/components/ImageGallery/ImageGallery.module.scss
@@ -12,21 +12,33 @@ ul {
     background-color: #000;
     border-radius: 15px;
     border: 1px solid;
-    cursor: pointer;
+
     max-width: 350px;
     padding: 2px;
     transition: 0.2s ease-in-out;
     width: 100%;
-
-    > a > img {
-      border-radius: 12px;
-      display: flex;
-      height: 277px;
-      width: 100%;
-    }
+    overflow: hidden;
 
     &:hover {
       transform: scale(1.2);
+      z-index: 100;
+    }
+
+    > button {
+      border-radius: 15px;
+      border: none;
+      cursor: pointer;
+      > img {
+        display: flex;
+        height: 277px;
+
+        width: 100%;
+      }
+    }
+
+    > button:hover,
+    > button:focus {
+      transform: none;
     }
 
     > div {
